# clh-server

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  clh-server.service  docker-compose.yml  env.example  init-user-db.sh  post-search.sh  postgresql.conf  setup-db.sh
.github/: renovate.json5
.github/workflows/: ci.yml
migrations/2020-02-24-011203_create_histories/: down.sql  up.sql
migrations/2020-03-20-080658_add-constraint-to-histories/: down.sql  up.sql
migrations/2020-03-25-125323_add-updated-at/: down.sql  up.sql
src/: actions.rs  main.rs  models.rs  schema.rs
