[package]
name = "clh-server"
version = "0.1.0"
authors = ["okkez <okkez000@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.0"
listenfd = "0.3"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.0"

diesel = { version = "1.0.0", features = ["postgres", "chrono"] }
dotenv = "0.9.0"
