[package]
name = "clh-server"
version = "0.1.0"
authors = ["okkez <okkez000@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.0"
futures = "*"
listenfd = "0.3"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.0"
json = "*"

diesel = { version = "1.0.0", features = ["postgres", "chrono", "r2d2", "numeric"] }
dotenv = "0.9.0"
chrono = { version = "*", features = ["serde"] }
r2d2 = "*"

env_logger = "*"

