[package]
name = "clh-server"
version = "0.2.0"
authors = ["okkez <okkez000@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.3"
actix-rt = "1.0"
futures = "0.3.30"
listenfd = "1.0.1"

serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"

diesel = { version = "2.1.6", features = ["postgres", "chrono", "r2d2", "numeric"] }
diesel_migrations = "2.1.0"
dotenv = "0.15.0"
chrono = { version = "*", features = ["serde"] }
r2d2 = "*"

env_logger = "*"

